--- a/src/AssistiveTouch/styles.css
+++ b/src/AssistiveTouch/styles.css
@@ -7,19 +7,80 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   transition: transform 0.1s ease;
   z-index: 1;
+  cursor: pointer;
+  touch-action: none;
 
   position: fixed;
   top: 0px;
   left: 0px;
-  
-  cursor: pointer;
-  touch-action: none;
 }
-
 .touch-node-inner {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.3);
   border-radius: 50%;
   pointer-events: none;
+}
+.menu {
+  width: 300px;
+  height: 300px;
+  margin: 0 auto;
+  background-color:rgba(0, 0, 0, 0.6);
+  border-radius: 16px;
+  transition: all 1s;
+
+  position: fixed;
+  top: 100px;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+.menu li {
+  width: 48px;
+  height: 48px;
+  text-align: center;
+  color: white;
+}
+.menu li i {
+  font-size: 36px;
+  font-style: normal;
+  display: block;
+}
+.menu ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+.menu-item-1 {
+  position: absolute;
+  top: 25%;
+  left: 15%;
+}
+.menu-item-2 {
+  position: absolute;
+  top: 5%;
+  left: 43%;
+}
+.menu-item-3 {
+  position: absolute;
+  top: 25%;
+  right: 15%;
+}
+.menu-item-4 {
+  position: absolute;
+  bottom: 25%;
+  right: 15%;
+}
+.menu-item-5 {
+  position: absolute;
+  bottom: 10%;
+  left: 43%;
+}
+.menu-item-6 {
+  position: absolute;
+  bottom: 25%;
+  left: 15%;
 }
