--- a/src/AssistiveTouch/styles.css
+++ b/src/AssistiveTouch/styles.css
@@ -2,6 +2,7 @@
   width: 32px;
   height: 32px;
   padding: 8px;
+  margin: 4px;
   background-color: rgba(0, 0, 0, 0.2);
   border-radius: 12px;
   border: 1px solid rgba(0, 0, 0, 0.1);
